# LiteReviewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: litereviewer.yml
data/: meteharun__SparePart_Predictor__pr1__diff.jsonl  meteharun__SparePart_Predictor__pr1__reviews__phi3_mini__zero.jsonl  meteharun__SparePart_Predictor__pr3__diff.jsonl  meteharun__SparePart_Predictor__pr3__reviews__phi3_mini__zero.jsonl
dataset/: experiment.jsonl  top_python_repos.jsonl
experiments/: gemma_few.csv  gemma_zero.csv  gpt_few.csv  gpt_zero.csv  mistral_few.csv  mistral_zero.csv  phi_few.csv  phi_zero.csv
lite_reviewer/: common.py  poster.py
lite_reviewer/prompts/: few_shot.json
reports/: slm_comparison.docx
scripts/: collect_data.py  comment_formatter.py  diff_extractor.py  get_repos.py  post_comments_github.py  review_generator.py  test.py  test_partial.py
