[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "litereviewer"
version = "0.1.0"
description = "LLM-based code review tool for GitHub PRs"
authors = [{ name = "Mete Harun Akcay" }]
requires-python = ">=3.10"

dependencies = [
    "certifi==2025.11.12",
    "idna==3.11",
    "pandas==2.3.3",
    "PyGithub==2.8.1",
    "requests==2.32.5",
    "urllib3==2.5.0"
    ]
